classDiagram

%% PageRaw----------------------------
PageRaw *-- PageGeneralInfo
PageRaw *-- PageMeta
PageRaw o-- TmptHub
PageRaw *-- TmptSET
PageRaw *-- CmptRawBUSH
PageRaw *-- RelationalUnitRefRegister


%% TmptSet----------------------------
TmptSET o-- TmptHub

%% CmptRawTREE------------------------
CmptRawBUSH *-- CmptRawSET

%% CmptRawSET-------------------------
CmptRawSET o-- CmptRaw
CmptRawSET o-- CmptRaw

%% CmptRaw----------------------------
CmptRaw *-- RawAttachingPoint
CmptRaw o-- Tmpt
CmptRaw *-- CmptRawStyle
CmptRaw *-- CmptRawStyleConfig
CmptRaw *--o CmptHookRaw

%% CmptHookRaw-----------------------
CmptHookRaw o-- TmptHook
CmptHookRaw *-- CmptHookStyleRaw
CmptHookRaw *-- CmptHookStyleConfigRaw
CmptHookRaw *-- RawAttacher


%% RawAttachingPoint----------
RawAttachingPoint o-- AttachingPointLocation

%% RawAttacher-------------------------
RawAttacher o-- AttacherLocation




